--- a/clock.html
+++ b/clock.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="page.js"></script>
-        <link rel="stylesheet" href="page.css">
+        <script src="clock.js"></script>
+        <link rel="stylesheet" href="clock.css">
     </head>
     <body onload="startClock();">
         <div>
